--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,7 @@ website:
     collapse-below: lg
     search: true
     left: 
-      - text: "{{< fa pencil >}} Hands-on Exercises"
+      - text: "{{< fa pencil size=lg >}} Hands-on Exercises"
         menu: 
           - text: 1. A Layered Grammar of Graphics - ggplot2 methods
             href: Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.html
@@ -35,7 +35,7 @@ website:
           - text: 10. Information Dashboard Design - R methods
             href: Hands-on_Ex/Hands-on_Ex08/Hands-on_Ex10.html 
             
-      - text: "{{< fa landmark >}} In-class Exercises"
+      - text: "{{< fa landmark size=lg >}} In-class Exercises"
         menu: 
           - text: In-Class Exercise 1
             href: In-class_Ex/In-class_Ex01/In-class_Ex01.html
@@ -54,7 +54,7 @@ website:
           - text: In-Class Exercise 8
             href: In-class_Ex/In-class_Ex05/In-class_Ex08.html  
  
-      - text: "{{< fa book-bookmark >}} Take-home Exercises"
+      - text: "{{< fa book-bookmark size=lg >}} Take-home Exercises"
         menu: 
           - text: Take-home Exercise 1
             href: Take-Home_Ex/Take-Home_Ex1/Take-Home_Ex1.html    
@@ -64,11 +64,15 @@ website:
             href: Take-Home_Ex/Take-Home_Ex3/Take-Home_Ex3.html  
           - text: Take-home Exercise 4
             href: Take-Home_Ex/Take-Home_Ex4/Take-Home_Ex4.html              
+      - text: "{{< fa user-group size=lg >}} Projects"
+        menu: 
+          - text: Coming soon!
+            href: "" 
     right:
       - href: index.qmd
-        text: "{{< fa house >}}"
+        text: "{{< fa house size=lg >}}"
       - href: about.qmd
-        text: "{{< fa regular face-smile >}}"
+        text: "{{< fa paw size=lg >}}"
   
   page-footer: 
     right: "Blog made with 💜 and [Quarto](https://quarto.org/)"
