--- a/_quarto.yml
+++ b/_quarto.yml
@@ -75,7 +75,7 @@ website:
         text: "{{< fa paw size=lg >}}"
   
   page-footer: 
-    right: "Blog made with 💜 and [Quarto](https://quarto.org/)"
+    right: "Blog made with 💜, [Pusheen](https://pusheen.com/), and [Quarto](https://quarto.org/)"
     border: "#65666a"
 
       
