--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,8 +18,10 @@ website:
             href: Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.html
           - text: 2. Beyond ggplot2 Fundamentals
             href: Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.html
-          - text: 3. Programming Interactive Data Visualisation & Animated Statistical Graphics with R
+          - text: 3a. Programming Interactive Data Visualisation with R
             href: Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.html
+          - text: 3b. Programming Animated Statistical Graphics with R
+            href: Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03b.html            
           - text: 4. Visualising Distribution, Statistical Analysism Uncertainty and Bulding Funnel Plot with R
             href: Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.html
           - text: 5. Building Ternary Plot, Visual Correlation Analysis / Multivariate Analysis, and Treemap Visualisation
