--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,7 +39,7 @@ website:
             
       - text: "In-class Exercises"
         menu: 
-          - text: In-Class Exercise 1
+          - text: 1. Now You See It
             href: In-class_Ex/In-class_Ex01/In-class_Ex01.html
           - text: In-Class Exercise 2
             href: In-class_Ex/In-class_Ex02/In-class_Ex02.html
