--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,8 +22,14 @@ website:
             href: Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.html
           - text: 3b. Programming Animated Statistical Graphics with R
             href: Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03b.html            
-          - text: 4. Visualising Distribution, Statistical Analysism Uncertainty and Bulding Funnel Plot with R
-            href: Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.html
+          - text: 4a. Visualising Distribution
+            href: Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04a.html
+          - text: 4b. Visualising Statistical Analysis
+            href: Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04b.html       
+          - text: 4c. Visualising Uncertainty
+            href: Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04c.html 
+          - text: 4d. Bulding Funnel Plot
+            href: Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04d.html             
           - text: 5. Building Ternary Plot, Visual Correlation Analysis / Multivariate Analysis, and Treemap Visualisation
             href: Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05.html
           - text: 6. Visualising and Analysing Time-oriented Data
