--- a/_quarto.yml
+++ b/_quarto.yml
@@ -72,12 +72,12 @@ website:
  
       - text: "Take-home Exercises"
         menu: 
-          - text: Take-home Exercise 1
+          - text: Take-home Exercise 1 - Investigating Student Performance
             href: Take-Home_Ex/Take-Home_Ex01/Take-Home_Ex01.html    
-          - text: Take-home Exercise 2
+          - text: Take-home Exercise 2 - DataVis Makeover
             href: Take-Home_Ex/Take-Home_Ex02/Take-Home_Ex02.html  
-          - text: Take-home Exercise 3
-            href: Take-Home_Ex/Take-Home_Ex3/Take-Home_Ex3.html  
+          - text: Take-home Exercise 3 - Be Weatherwise or Otherwise
+            href: Take-Home_Ex/Take-Home_Ex03/Take-Home_Ex03.html  
           - text: Take-home Exercise 4
             href: Take-Home_Ex/Take-Home_Ex4/Take-Home_Ex4.html              
       - text: "Projects"
