--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,8 +42,12 @@ website:
             href: Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05e.html            
           - text: 6. Visualising and Analysing Time-oriented Data
             href: Hands-on_Ex/Hands-on_Ex06/Hands-on_Ex06.html
-          - text: 7. Choropleth Mapping, Geospatial Point Data, and Analytical Mapping
-            href: Hands-on_Ex/Hands-on_Ex07/Hands-on_Ex07.html   
+          - text: 7a. Choropleth Mapping, Geospatial Point Data, and Analytical Mapping
+            href: Hands-on_Ex/Hands-on_Ex07/Hands-on_Ex07a.html   
+          - text: 7b. Visualising Geospatial Point Data
+            href: Hands-on_Ex/Hands-on_Ex07/Hands-on_Ex07b.html   
+          - text: 7c. Analytical Mapping
+            href: Hands-on_Ex/Hands-on_Ex07/Hands-on_Ex07c.html               
           - text: 8. Modelling, Visualising and Analysing Network Data with R
             href: Hands-on_Ex/Hands-on_Ex08/Hands-on_Ex08.html  
           - text: 9. Visualising and Analysing Text Data
