--- a/_quarto.yml
+++ b/_quarto.yml
@@ -50,10 +50,8 @@ website:
             href: Hands-on_Ex/Hands-on_Ex07/Hands-on_Ex07c.html               
           - text: 8. Modelling, Visualising and Analysing Network Data with R
             href: Hands-on_Ex/Hands-on_Ex08/Hands-on_Ex08.html  
-          - text: 9. Visualising and Analysing Text Data
-            href: Hands-on_Ex/Hands-on_Ex08/Hands-on_Ex09.html 
           - text: 10. Information Dashboard Design - R methods
-            href: Hands-on_Ex/Hands-on_Ex08/Hands-on_Ex10.html 
+            href: Hands-on_Ex/Hands-on_Ex10/Hands-on_Ex10.html 
             
       - text: "In-class Exercises"
         menu: 
@@ -61,6 +59,11 @@ website:
             href: In-class_Ex/In-class_Ex01/In-class_Ex01.html
           - text: 2. Horizon Plot
             href: In-class_Ex/In-class_Ex06/In-class_Ex06.html  
+          - text: 7. tmaps
+            href: In-class_Ex/In-class_Ex07/In-class_Ex07.html  
+          - text: 9. Network Analysis
+            href: In-class_Ex/In-class_Ex09/In-class_Ex09.html 
+
 
       - text: "Take-home Exercises"
         menu: 
@@ -70,8 +73,8 @@ website:
             href: Take-Home_Ex/Take-Home_Ex02/Take-Home_Ex02.html  
           - text: Take-home Exercise 3 - Be Weatherwise or Otherwise
             href: Take-Home_Ex/Take-Home_Ex03/Take-Home_Ex03.html  
-          - text: Take-home Exercise 4
-            href: Take-Home_Ex/Take-Home_Ex4/Take-Home_Ex4.html              
+          - text: Take-home Exercise 4 - Shiny App Prototype
+            href: Take-Home_Ex/Take-Home_Ex04/Take-Home_Ex04.html              
       - text: "Projects"
         menu: 
           - text: Coming soon!
